Hystrix-Metrics und Test ergänzt

--- a/src/main/resources/templates/vets/vetList.html
+++ b/src/main/resources/templates/vets/vetList.html
@@ -6,6 +6,7 @@
 <body>
 
   <h2>Veterinarians</h2>
+  <p th:text="${randomNumber}">Zufallswert</p>
 
   <table id="vets" class="table table-striped">
     <thead>
